@@ -1,3 +1,6 @@
+20131019 - fhabermann
+* added select content option for file upload
+
 20131018 - fhabermann
 * enable move of content
 * added select page option for page
